# prestige

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  demo.sh  pyproject.toml
scripts/: clean_db.sh  generate_pdfs.py  show_logs.sh
src/: automation.py  extraction.py  ingestion.py  logging_db.py  pipeline.py  schemas.py
src/prestige.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_automation.py  test_extraction.py  test_generate_pdfs.py  test_ingestion.py  test_integration.py  test_logging_db.py  test_pipeline.py  test_schemas.py
web_form/: index.html
